--- a/index.html
+++ b/index.html
@@ -2,96 +2,75 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Dịch Màn Hình Nhanh</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dịch Màn Hình AI</title>
     <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background-color: #f2f2f7; margin: 0; padding: 20px; text-align: center; }
+        body { font-family: -apple-system, sans-serif; background-color: #f2f2f7; margin: 0; padding: 20px; text-align: center; }
         .card { background: white; border-radius: 20px; padding: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); margin-bottom: 20px; }
-        h2 { font-size: 18px; color: #8e8e93; margin-top: 0; text-transform: uppercase; letter-spacing: 1px; }
-        .result { font-size: 24px; font-weight: bold; color: #007aff; margin: 10px 0; line-height: 1.4; }
-        .original { font-size: 16px; color: #333; font-style: italic; margin-bottom: 10px; border-bottom: 1px solid #eee; padding-bottom: 10px;}
-        .loading { color: #888; }
-        .btn { display: inline-block; padding: 10px 20px; background: #007aff; color: white; border-radius: 12px; text-decoration: none; margin-top: 10px; font-weight: 500;}
+        h2 { font-size: 14px; color: #8e8e93; text-transform: uppercase; margin-top: 0; }
+        .result { font-size: 20px; font-weight: bold; color: #007aff; margin: 15px 0; line-height: 1.5; }
+        .original { font-size: 16px; color: #333; font-style: italic; background: #eee; padding: 10px; border-radius: 10px; }
+        .loading { color: #888; font-style: italic;}
     </style>
 </head>
 <body>
 
     <div class="card">
         <h2>Kết quả dịch</h2>
-        <div id="vietnameseText" class="result"><span class="loading">Đang phân tích & dịch...</span></div>
+        <div id="vietnameseText" class="result">
+            <span class="loading">Đang phân tích & dịch...</span>
+        </div>
     </div>
 
     <div class="card">
-        <h2>Văn bản gốc đã lọc</h2>
-        <div id="originalText" class="original">...</div>
+        <h2>Văn bản gốc (Clean)</h2>
+        <div id="originalClean" class="original">...</div>
     </div>
 
     <script>
-        // 1. Hàm lấy dữ liệu từ URL (do Phím tắt gửi qua)
-        function getQueryParam(param) {
-            const urlParams = new URLSearchParams(window.location.search);
-            return urlParams.get(param);
-        }
+        // 1. Cấu hình
+        // THAY LINK WORKER CỦA BẠN VÀO ĐÂY
+        const WORKER_URL = "https://add-tuvung.ngxuanhai123.workers.dev/"; 
 
-        // 2. Hàm lọc rác và tìm văn bản trong ngoặc ()
-        function extractCleanText(rawText) {
-            if (!rawText) return null;
+        // 2. Lấy dữ liệu từ URL
+        const urlParams = new URLSearchParams(window.location.search);
+        const rawInput = urlParams.get('data');
 
-            // Logic regex: Tìm tất cả nội dung nằm trong ngoặc đơn (...)
-            // Phù hợp với cả 3 mẫu bạn đưa ra vì nội dung cần thiết đều nằm trong ()
-            // Mẫu 1: (I don't have time)
-            // Mẫu 2: (tinggalkan saya sendiri leave me alone)
-            // Mẫu 3: (saya tidak punya uang)
-            const matches = rawText.match(/\((.*?)\)/g);
+        async function processTranslation() {
+            const viDiv = document.getElementById('vietnameseText');
+            const orgDiv = document.getElementById('originalClean');
 
-            if (matches && matches.length > 0) {
-                // Lấy kết quả dài nhất tìm được (để tránh lấy nhầm mấy cái rác ngắn như "(80)")
-                let bestMatch = matches.reduce((a, b) => a.length > b.length ? a : b);
-                
-                // Xóa dấu ngoặc đơn ở đầu và cuối đi
-                return bestMatch.replace(/^\(/, '').replace(/\)$/, '');
+            if (!rawInput) {
+                viDiv.innerText = "Lỗi: Không có dữ liệu.";
+                return;
             }
-
-            // Dự phòng: Nếu không tìm thấy ngoặc, trả về toàn bộ văn bản để dịch tạm
-            return rawText;
-        }
-
-        // 3. Hàm gọi Google Translate (miễn phí qua API public)
-        async function translateText(text) {
-            const sourceTextDiv = document.getElementById('originalText');
-            const targetTextDiv = document.getElementById('vietnameseText');
-
-            sourceTextDiv.innerText = text;
 
             try {
-                // Gọi API dịch sang tiếng Việt (vi)
-                const url = `https://translate.googleapis.com/translate_a/single?client=gtx&sl=auto&tl=vi&dt=t&q=${encodeURIComponent(text)}`;
-                const response = await fetch(url);
-                const data = await response.json();
-                
-                // Ghép kết quả lại (API trả về mảng)
-                let translatedText = "";
-                data[0].forEach(item => {
-                    translatedText += item[0];
+                // Gọi sang Cloudflare Worker
+                const response = await fetch(WORKER_URL, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    // Gửi rawText để kích hoạt tính năng mới trong Worker
+                    body: JSON.stringify({ rawText: rawInput }) 
                 });
 
-                targetTextDiv.innerText = translatedText;
+                const data = await response.json();
+
+                if (data.vietnamese) {
+                    viDiv.innerText = data.vietnamese;
+                    orgDiv.innerText = data.original_clean;
+                } else {
+                    viDiv.innerText = "Lỗi xử lý từ AI.";
+                }
+
             } catch (error) {
-                targetTextDiv.innerText = "Lỗi khi dịch. Vui lòng thử lại.";
                 console.error(error);
+                viDiv.innerText = "Lỗi kết nối Server.";
             }
         }
 
-        // --- CHẠY CHƯƠNG TRÌNH ---
-        const rawInput = getQueryParam('data'); // Lấy text thô từ Shortcut
-
-        if (rawInput) {
-            const cleanText = extractCleanText(rawInput);
-            translateText(cleanText);
-        } else {
-            document.getElementById('vietnameseText').innerText = "Không tìm thấy dữ liệu đầu vào.";
-            document.getElementById('originalText').innerText = "Hãy chạy từ Phím tắt iOS.";
-        }
+        // Chạy ngay khi mở web
+        processTranslation();
     </script>
 </body>
 </html>
