--- a/index.html
+++ b/index.html
@@ -5,72 +5,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dịch Màn Hình AI</title>
     <style>
-        body { font-family: -apple-system, sans-serif; background-color: #f2f2f7; margin: 0; padding: 20px; text-align: center; }
-        .card { background: white; border-radius: 20px; padding: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); margin-bottom: 20px; }
-        h2 { font-size: 14px; color: #8e8e93; text-transform: uppercase; margin-top: 0; }
-        .result { font-size: 20px; font-weight: bold; color: #007aff; margin: 15px 0; line-height: 1.5; }
-        .original { font-size: 16px; color: #333; font-style: italic; background: #eee; padding: 10px; border-radius: 10px; }
-        .loading { color: #888; font-style: italic;}
+        body { font-family: -apple-system, sans-serif; background: #f2f2f7; padding: 20px; text-align: center; }
+        .card { background: white; border-radius: 16px; padding: 20px; margin-bottom: 20px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        .error { color: red; font-weight: bold; }
+        textarea { width: 100%; height: 100px; margin-top: 10px; border: 1px solid #ddd; border-radius: 8px; padding: 10px; }
     </style>
 </head>
 <body>
-
     <div class="card">
-        <h2>Kết quả dịch</h2>
-        <div id="vietnameseText" class="result">
-            <span class="loading">Đang phân tích & dịch...</span>
-        </div>
+        <h3>Kết quả:</h3>
+        <div id="result" style="font-size: 18px; color: #007aff;">Đang xử lý...</div>
     </div>
 
     <div class="card">
-        <h2>Văn bản gốc (Clean)</h2>
-        <div id="originalClean" class="original">...</div>
+        <h3>Debug Info (Chụp cái này gửi mình nếu lỗi):</h3>
+        <textarea id="debugLog" readonly></textarea>
     </div>
 
     <script>
-        // 1. Cấu hình
-        // THAY LINK WORKER CỦA BẠN VÀO ĐÂY
-        const WORKER_URL = "https://add-tuvung.ngxuanhai123.workers.dev/"; 
+        // --- CẤU HÌNH ---
+        // Đảm bảo link này đúng 100%
+        const WORKER_URL = "https://add-tuvung.ngxuanhai123.workers.dev"; 
 
-        // 2. Lấy dữ liệu từ URL
-        const urlParams = new URLSearchParams(window.location.search);
-        const rawInput = urlParams.get('data');
+        function log(msg) {
+            const logBox = document.getElementById('debugLog');
+            logBox.value += msg + "\n----------------\n";
+        }
 
-        async function processTranslation() {
-            const viDiv = document.getElementById('vietnameseText');
-            const orgDiv = document.getElementById('originalClean');
+        async function run() {
+            const resultDiv = document.getElementById('result');
+            
+            // 1. Kiểm tra URL xem có dữ liệu không
+            const urlParams = new URLSearchParams(window.location.search);
+            const rawInput = urlParams.get('data');
+
+            log("1. Dữ liệu nhận từ Shortcut: " + (rawInput ? rawInput : "[RỖNG!]"));
 
             if (!rawInput) {
-                viDiv.innerText = "Lỗi: Không có dữ liệu.";
+                resultDiv.innerHTML = "<span class='error'>Lỗi: Không nhận được văn bản từ Phím tắt.</span>";
                 return;
             }
 
             try {
-                // Gọi sang Cloudflare Worker
+                resultDiv.innerText = "Đang gửi lên Server...";
+                
+                // 2. Gọi Worker
                 const response = await fetch(WORKER_URL, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    // Gửi rawText để kích hoạt tính năng mới trong Worker
-                    body: JSON.stringify({ rawText: rawInput }) 
+                    body: JSON.stringify({ rawText: rawInput })
                 });
 
-                const data = await response.json();
+                log("2. Server Status: " + response.status);
 
-                if (data.vietnamese) {
-                    viDiv.innerText = data.vietnamese;
-                    orgDiv.innerText = data.original_clean;
-                } else {
-                    viDiv.innerText = "Lỗi xử lý từ AI.";
+                const text = await response.text();
+                log("3. Server trả về: " + text);
+
+                // Thử parse JSON
+                try {
+                    const data = JSON.parse(text);
+                    if (data.vietnamese) {
+                        resultDiv.innerText = data.vietnamese;
+                    } else if (data.error) {
+                        resultDiv.innerHTML = `<span class='error'>Lỗi Server: ${data.error}</span>`;
+                    } else {
+                        resultDiv.innerText = text; // Hiện nguyên văn nếu không phải JSON
+                    }
+                } catch (e) {
+                    // Nếu server trả về text thường (không phải JSON)
+                    resultDiv.innerText = text;
                 }
 
             } catch (error) {
-                console.error(error);
-                viDiv.innerText = "Lỗi kết nối Server.";
+                log("LỖI KẾT NỐI: " + error.message);
+                resultDiv.innerHTML = "<span class='error'>Lỗi kết nối. Xem khung Debug bên dưới.</span>";
             }
         }
 
-        // Chạy ngay khi mở web
-        processTranslation();
+        run();
     </script>
 </body>
 </html>
